feat: adicionando validação na criação de pacciente
